Show item list/info

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,13 @@
     <a href="/new_item">Uusi ilmoitus</a>
   </p>
  
+  <h2>Reseptit</h2>
+  
+  <ul>
+    {% for item in items %}
+    <li><a href="/item/{{ item.id }}">{{ item.title }}</a></li>
+    {% endfor %}
+  </ul>
 </body>
 
 </html>
