--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,8 @@
     <a href="/logout">Kirjaudu ulos</a>
   </p>
   <p>
-    <a href="/new_item">Uusi ilmoitus</a>
+    <a href="/new_item">Uusi resepti</a>
+    <a href="/find_item">Etsi resepti</a>
   </p>
  
   <h2>Reseptit</h2>
