--- a/templates/index.html
+++ b/templates/index.html
@@ -12,15 +12,21 @@
   <p>
     Olet kirjautunut nimellä {{ session.username }}, id-numerosi on {{ session.user_id }}
   </p>
-  {% endif %}
+  <p>
+    <a href="/logout">Kirjaudu ulos</a>
+  </p>
 
+  <p>
+    <a href="/new_item">Uusi resepti</a>
+  </p>
+  {% else %}
   <p>
     <a href="/login">Kirjaudu sisään</a>
     <a href="/register">Luo tunnus</a>
-    <a href="/logout">Kirjaudu ulos</a>
   </p>
+  {% endif %}
+
   <p>
-    <a href="/new_item">Uusi resepti</a>
     <a href="/find_item">Etsi resepti</a>
   </p>
  
