--- a/templates/new_item.html
+++ b/templates/new_item.html
@@ -10,11 +10,11 @@
   <form action="/create_item" method="post">
     <p>
       Otsikko: <br />
-      <input type="text" name="title" />
+      <input type="text" name="title" maxlength="50" required/>
     </p>
     <p>
       Kuvaus: <br />
-      <textarea name="description" rows="20" cols="50"></textarea>
+      <textarea name="description" rows="20" cols="50" maxlength="2000" required></textarea>
     </p>
     <input type="submit" value="Lisää resepti" />
   </form>
