--- a/templates/show_item.html
+++ b/templates/show_item.html
@@ -17,7 +17,7 @@
     {{ item.description }}
   </p>
   <p>
-    Reseptin lisääjä: {{ item.username }}
+    Reseptin lisääjä: <a href="/user/{{ item.user_id }}">{{ item.username }}</a>
   </p>
   <p>
     <a href="/">Palaa etusivulle</a>
