--- a/templates/new_item.html
+++ b/templates/new_item.html
@@ -16,6 +16,17 @@
       Kuvaus: <br />
       <textarea name="description" rows="20" cols="50" maxlength="2000" required></textarea>
     </p>
+    {% for class in classes %}
+    <p>
+      {{ class }}: <br />
+      <select name="classes">
+        <option value="">(valitse)</option>
+      {% for option in classes[class] %}
+        <option value="{{ class }}:{{ option }}">{{ option }}</option>  
+      {% endfor %}
+      </select>
+    </p>
+    {% endfor %}
     <input type="submit" value="Lisää resepti" />
   </form>
 </body>
