--- a/templates/show_item.html
+++ b/templates/show_item.html
@@ -19,7 +19,17 @@
   <p>
     Reseptin lisääjä: <a href="/user/{{ item.user_id }}">{{ item.username }}</a>
   </p>
-  <p>
+  {% if classes %}
+  <div>
+    Luokat:
+    <ul>
+      {% for class in classes %}
+      <li>{{ class.title }}: {{ class.value }}</li>
+      {% endfor %}
+    </ul>
+  </div>
+  {% endif %}
+   <p>
     <a href="/">Palaa etusivulle</a>
   </p>
 </body>
