--- a/templates/edit_item.html
+++ b/templates/edit_item.html
@@ -1,39 +1,34 @@
-<!DOCTYPE html>
-<html>
+{% extends "layout.html" %}
 
-<head>
-  <title>Reseptin muokkaus</title>
-</head>
+{% block title %}Reseptin muokkaus{% endblock %}
 
-<body>
-  <h1>Reseptin muokkaus</h1> 
-  <form action="/update_item" method="post">
-    <p>
-      Otsikko: <br />
-      <input type="text" name="title" value="{{ item.title }}" maxlength="50" required/>
-    </p>
-    <p>
-      Kuvaus: <br />
-      <textarea name="description" rows="20" cols="50" maxlength="2000" required>{{ item.description }} </textarea>
-    </p>
-    <input type="hidden" name="item_id" value="{{ item.id }}" />
-    {% for class in all_classes %}
-    <p>
-      {{ class }}: <br />
-      <select name="classes">
-        <option value="">(valitse)</option>
-      {% for option in all_classes[class] %}
-        {% if classes[class] == option %}
-        <option value="{{ class }}:{{ option }}"selected>{{ option }}</option>
-        {% else %}
-        <option value="{{ class }}:{{ option }}">{{ option }}</option>
-        {% endif %}
-      {% endfor %}
-      </select>
-    </p>
+{% block content %}
+<h2>Reseptin muokkaus</h2> 
+<form action="/update_item" method="post">
+  <p>
+    Otsikko: <br />
+    <input type="text" name="title" value="{{ item.title }}" maxlength="50" required/>
+  </p>
+  <p>
+    Kuvaus: <br />
+    <textarea name="description" rows="20" cols="50" maxlength="2000" required>{{ item.description }} </textarea>
+  </p>
+  <input type="hidden" name="item_id" value="{{ item.id }}" />
+  {% for class in all_classes %}
+  <p>
+    {{ class }}: <br />
+    <select name="classes">
+      <option value="">(valitse)</option>
+    {% for option in all_classes[class] %}
+      {% if classes[class] == option %}
+      <option value="{{ class }}:{{ option }}"selected>{{ option }}</option>
+      {% else %}
+      <option value="{{ class }}:{{ option }}">{{ option }}</option>
+      {% endif %}
     {% endfor %}
-    <input type="submit" value="Muokkaa reseptiä" />
-  </form>
-</body>
-
-</html>
+    </select>
+  </p>
+  {% endfor %}
+  <input type="submit" value="Muokkaa reseptiä" />
+</form>
+{% endblock %}
