--- a/templates/find_item.html
+++ b/templates/find_item.html
@@ -1,34 +1,24 @@
-<!DOCTYPE html>
-<html>
+{% extends "layout.html" %}
 
-<head>
-  <title>Etsi resepti</title>
-</head>
+{% block title %}Etsi resepti{% endblock %}
 
-<body>
-  <h1>Etsi resepti</h1>
+{% block content %}
+<h2>Etsi resepti</h2>
 
-  <form action="/find_item" method="get">
-    <p> 
-      Hakusana: <input type="text" name="query" value="{{ query }}">
-    </p>
-    <input type="submit" value="Etsi">
-  </form>
-
+<form action="/find_item" method="get">
   <p> 
-    <a href="/">Takaisin</a>
-  </p>  
+    Hakusana: <input type="text" name="query" value="{{ query }}">
+  </p>
+  <input type="submit" value="Etsi">
+</form>
 
-  {% if query %}
-  <h2>Tulokset</h2>
+{% if query %}
+<h2>Tulokset</h2>
 
-  <ul>
-    {% for item in results %}
-    <li><a href="/item/{{ item.id }}">{{ item.title }}</a></li>
-    {% endfor %}
-  </ul>
-  {% endif %}
-
-</body>
-
-</html>
+<ul>
+  {% for item in results %}
+  <li><a href="/item/{{ item.id }}">{{ item.title }}</a></li>
+  {% endfor %}
+</ul>
+{% endif %}
+{% endblock %}
