--- a/templates/index.html
+++ b/templates/index.html
@@ -1,37 +1,13 @@
-<!DOCTYPE html>
-<html>
+{% extends "layout.html" %}
 
-<head>
-  <title>Reseptisovellus</title>
-</head>
+{% block title %}Reseptisovellus{% endblock %}
 
-<body>
-  <h1>Reseptisovellus</h1>
-
-  {% if session.username %}
-  <p>
-    Olet kirjautunut nimellä {{ session.username }}
-  </p>
-  {% endif %}
-
-  <p>
-    <a href="/find_item">Etsi resepti</a> |
-  {% if session.user_id %}
-    <a href="/new_item">Uusi resepti</a> |
-    <a href="/logout">Kirjaudu ulos</a>
-  {% else %}
-    <a href="/login">Kirjaudu sisään</a> |
-    <a href="/register">Luo tunnus</a>
-  {% endif %}
-  </p>
- 
-  <h2>Reseptit</h2>
+{% block content %}
+<h2>Reseptit</h2>
   
-  <ul>
-    {% for item in items %}
-    <li><a href="/item/{{ item.id }}">{{ item.title }}</a></li>
-    {% endfor %}
-  </ul>
-</body>
-
-</html>
+<ul>
+  {% for item in items %}
+  <li><a href="/item/{{ item.id }}">{{ item.title }}</a></li>
+  {% endfor %}
+</ul>
+{% endblock %}
