--- a/templates/new_item.html
+++ b/templates/new_item.html
@@ -1,34 +1,29 @@
-<!DOCTYPE html>
-<html>
+{% extends "layout.html" %}
 
-<head>
-  <title>Uuden reseptin lisääminen</title>
-</head>
+{% block title %}Uusi ilmoitus{% endblock %}
 
-<body>
-  <h1>Uusi resepti</h1> 
-  <form action="/create_item" method="post">
-    <p>
-      Otsikko: <br />
-      <input type="text" name="title" maxlength="50" required/>
-    </p>
-    <p>
-      Kuvaus: <br />
-      <textarea name="description" rows="20" cols="50" maxlength="2000" required></textarea>
-    </p>
-    {% for class in classes %}
-    <p>
-      {{ class }}: <br />
-      <select name="classes">
-        <option value="">(valitse)</option>
-      {% for option in classes[class] %}
-        <option value="{{ class }}:{{ option }}">{{ option }}</option>  
-      {% endfor %}
-      </select>
-    </p>
+{% block content %}
+<h2>Uusi ilmoitus<h2> 
+<form action="/create_item" method="post">
+  <p>
+    Otsikko: <br />
+    <input type="text" name="title" maxlength="50" required/>
+  </p>
+  <p>
+    Kuvaus: <br />
+    <textarea name="description" rows="20" cols="50" maxlength="2000" required></textarea>
+  </p>
+  {% for class in classes %}
+  <p>
+    {{ class }}: <br />
+    <select name="classes">
+      <option value="">(valitse)</option>
+    {% for option in classes[class] %}
+      <option value="{{ class }}:{{ option }}">{{ option }}</option>  
     {% endfor %}
-    <input type="submit" value="Lisää resepti" />
-  </form>
-</body>
-
-</html>
+    </select>
+  </p>
+  {% endfor %}
+  <input type="submit" value="Lisää resepti" />
+</form>
+{% endblock %}
