--- a/templates/show_user.html
+++ b/templates/show_user.html
@@ -1,24 +1,16 @@
-<!DOCTYPE html>
-<html>
+{% extends "layout.html" %}
 
-<head>
-  <title>Käyttäjä {{ user.username }}</title>
-</head>
+{% block title %}{{ user.username }}{% endblock %}
 
-<body>
-  <h1>Käyttäjä: {{ user.username }}</h1>
-  <p>
-    Käyttäjällä on yhteensä {{ items | count }} reseptiä.
-  </p>
-  <h2>Reseptit</h2>  
-  <ul>
-    {% for item in items %}
-    <li><a href="/item/{{ item.id }}">{{ item.title }}</a></li>
-    {% endfor %}
-  </ul> 
-  <p>
-    <a href="/">Palaa etusivulle</a>
-  </p>
-</body>
-
-</html>
+{% block content %}
+<h2>Käyttäjä: {{ user.username }}</h2>
+<p>
+  Käyttäjällä on yhteensä {{ items | count }} reseptiä.
+</p>
+<h3>Reseptit</h3>  
+<ul>
+  {% for item in items %}
+  <li><a href="/item/{{ item.id }}">{{ item.title }}</a></li>
+  {% endfor %}
+</ul> 
+{% endblock %}
