--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,12 @@
 {% block content %}
 <h2>Reseptit</h2>
   
-<ul>
-  {% for item in items %}
-  <li><a href="/item/{{ item.id }}">{{ item.title }}</a></li>
+{% for item in items %}
+<div class="item">
+<a href="/item/{{ item.id }}">{{ item.title }}</a> <br />
+Reseptin lisääjä: <a href="/user/{{ item.user_id }}">{{ item.username }}</a> <br />
+Kommentteja: {{ item.comment_count }}
+</div>
   {% endfor %}
 </ul>
 {% endblock %}
