--- a/templates/new_item.html
+++ b/templates/new_item.html
@@ -1,9 +1,9 @@
 {% extends "layout.html" %}
 
-{% block title %}Uusi ilmoitus{% endblock %}
+{% block title %}Uusi resepti{% endblock %}
 
 {% block content %}
-<h2>Uusi ilmoitus<h2> 
+<h2>Uusi resepti<h2> 
 <form action="/create_item" method="post">
   <p>
     Otsikko: <br />
