--- a/templates/show_item.html
+++ b/templates/show_item.html
@@ -19,19 +19,14 @@
 <p>
   {{ item.description }}
 </p>
-<p>
-  Reseptin lisääjä: <a href="/user/{{ item.user_id }}">{{ item.username }}</a>
-</p>
+<ul>
+  <li>Reseptin lisääjä: <a href="/user/{{ item.user_id }}">{{ item.username }}</a></li>
 {% if classes %}
-<div>
-  Luokat:
-  <ul>
-    {% for class in classes %}
-    <li>{{ class.title }}: {{ class.value }}</li>
-    {% endfor %}
-  </ul>
-</div>
+  {% for class in classes %}
+  <li>{{ class.title }}: {{ class.value }}</li>
+  {% endfor %}
 {% endif %}
+</ul>
 {% if comments %}
 <div>
   Kommentit:
@@ -40,12 +35,14 @@
     <li>{{ comment.note }}, <a href="/user/{{ comment.user_id}}">{{ comment.username }}</a></li>
     {% endfor %}
   </ul>
-  </div>
-  {% endif %}
+</div>
+{% endif %}
+{% if session.user_id %}
 <h3>Uusi kommentti</h3>
 <form action="/create_comment" method="post">
     <input type="text" name="note" id="note" size="50" required />
     <input type="hidden" name="item_id" value="{{ item.id }}" >      
     <input type="submit" value="Lisää kommentti" />
 </form>
+{% endif %}
 {% endblock %}
