--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,7 +11,7 @@
 
   {% if session.username %}
   <p>
-    Olet kirjautunut nimellä {{ session.username }}
+    Olet kirjautunut nimellä <a href="/user/{{ session.user_id }}"> {{ session.username }} </a>
   </p>
   {% endif %}
 
